[package]
name = "axotag"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axoproject = { version = "0.5.0", default-features = false, features = ["cargo-projects"] }
miette = "5.6.0"
semver = "1.0.14"
thiserror = "1.0.35"
